# PlotSystem2

./: .env.example  .gitignore  CLAUDE.md  README.md  mvp_seed_rainy_inn.txt  package-lock.json  package.json  pyproject.toml
backend/: __init__.py  config.py  exceptions.py  main.py  models.py
backend/agents/: __init__.py  base_agent.py  character_agent.py  director_agent.py  summary_agent.py
backend/api/: branches.py  characters.py  director.py  graph.py  output.py  projects.py  scenes.py  schemas.py
backend/graphrag_pipeline/: __init__.py  entity_extractor.py  persona_builder.py  pipeline.py  world_rules.py
backend/knowledge_graph/: __init__.py  graph_manager.py  queries.py  schema.py
backend/memory/: __init__.py  embeddings.py  episodic.py  long_term.py  memory_manager.py  short_term.py
backend/scene_engine/: __init__.py  engine.py  scene_config.py  termination.py
backend/services/: __init__.py  events.py  orchestrator.py  repository.py
backend/snapshot/: __init__.py  branch_tree.py  models.py  snapshot_manager.py
backend/utils/: db.py  init_db.py  llm.py  logger.py  serializer.py
docs/fix-tickets/: 01-rollback-fix.md  02-embedding-remote.md  03-branch-switch-frontend.md  04-director-context.md  05-character-inspector.md  README.md  (+9 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: run_demo.py
tests/: conftest.py  test_character_agent.py  test_graphrag_pipeline.py  test_orchestrator.py  test_scene_engine.py  test_snapshot_manager.py
(+30 files in other folders)
