[project]
name = "plotsystem"
version = "0.1.0"
description = "影视多智能体、多分枝剧情推演系统"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "chromadb>=0.4.0",
    "kuzu>=0.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]
# graphrag 单独可选安装，因其依赖较重
graphrag = [
    "graphrag>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# UP042: 保留 (str, Enum) 写法以兼容 Pydantic/JSON 序列化习惯
ignore = ["E501", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true